--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
+@import "~leaflet/dist/leaflet.css";
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+/*.leaflet-container .leaflet-marker-icon {*/
+/*  background-image: url(~leaflet/dist/images/marker-icon.png);*/
+/*}*/
+
+/*.leaflet-container .leaflet-marker-shadow {*/
+/*  background-image: url(~leaflet/dist/images/marker-shadow.png);*/
+/*}*/
